--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
 	<script src="js/script.js"></script>
 	<link rel="stylesheet" href="css/style.css" />
-	<audio controls autoplay loop>
+	<audio class="player" controls autoplay loop>
     	<source src="audio/got-theme.mp3" type="audio/mpeg">
   	</audio>
 </head>
@@ -17,9 +17,10 @@
 
 
 	<div class="container">
-		<div class="cells" x-ng-repeat="b in board track by $index" x-ng-click="clicker($index)">{{ b }}
+		<div class="cells" x-ng-repeat="b in board track by $index" x-ng-click="clicker($index)" x-ng-class="{stark: b =='Stark', lannister: b== 'Lannister'}">{{ b }}
 		</div>
 	</div>
 
+<!-- x-ng-class="{[class name]: [check to see if content is "Stark"] } -->
 </body>
 </html>
