--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <head>
 	<title>TicTacThrones</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
+	<script src="https://cdn.firebase.com/v0/firebase.js"></script>
+	<script src="https://cdn.firebase.com/libs/angularfire/0.6.0/angularfire.min.js"></script>
 	<script src="js/script.js"></script>
 	<link rel="stylesheet" href="css/style.css" />
+	<link href='http://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
 	<audio class="player" controls autoplay loop>
     	<source src="audio/got-theme.mp3" type="audio/mpeg">
   	</audio>
 </head>
 <body x-ng-app="gameApp" x-ng-controller="GameController">
-	
+	<h1>Tic Tac Thrones</h1>
 
 	<!-- <div class="houses">
 		<div x-ng-repeat="h in houses"></div>
