--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="https://cdn.firebase.com/libs/angularfire/0.6.0/angularfire.min.js"></script>
 	<script src="js/script.js"></script>
 	<link rel="stylesheet" href="css/style.css" />
-	<link href='http://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
 	<audio class="player" controls autoplay loop>
     	<source src="audio/got-theme.mp3" type="audio/mpeg">
   	</audio>
